updated illyrian tree and several localization fixes

--- a/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Illyria_l_english.yml
+++ b/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Illyria_l_english.yml
@@ -435,7 +435,7 @@ ILL_strengthen_economic_ties_desc:0 "Austria always helped us develop by forming
 ILL_order_and_uniformity:0 "Order and Uniformity"
 ILL_order_and_uniformity_desc:0 "Illyrian people have to recognize that the Austrians are their overlords. So far their benevolent rule always helped Croatia, and we need to cooperate against our common enemy, the Hungarians."
 ILL_quench_minor_rebellions:0 "Quench Minor Rebellions"
-ILL_quench_minor_rebellions_desc:0 "So far, Montenegrin nationalism has been a thorn in our side. Their patriotism is threatening this country's very foundation, and we need to put a stop to their protests and rebellions.
+ILL_quench_minor_rebellions_desc:0 "So far, Montenegrin nationalism has been a thorn in our side. Their patriotism is threatening this country's very foundation, and we need to put a stop to their protests and rebellions."
 ILL_economic_dependency:0 "Economic Dependency"
 ILL_economic_dependency_desc:0 "Austria being a country with far superior economy, it would make sense for us to be a part of that economy ourselves. Losing influence would pay off, since our people would be happier."
 ILL_negotiate_with_habsburgs:0 "Negotiate with the Habsburgs"
