--- a/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Serbia_l_english.yml
+++ b/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Serbia_l_english.yml
@@ -200,6 +200,37 @@ SERempire3_national_populist:0 "Serbian Empire"
 SERempire3_national_populist_ADJ:0 "Serbian"
 SERempire3_national_populist_DEF:0 "The Serbian Empire"
 
+BOS_herzegovina_totalist:0 "Herzegovina"
+BOS_herzegovina_totalist_ADJ:0 "Herzegovinian"
+BOS_herzegovina_totalist_DEF:0 "Herzegovina"
+BOS_herzegovina_syndicalist:0 "Herzegovina "
+BOS_herzegovina_syndicalist_ADJ:0 "Herzegovinian"
+BOS_herzegovina_syndicalist_DEF:0 "Herzegovina"
+BOS_herzegovina_radical_socialist:0 "Herzegovina"
+BOS_herzegovina_radical_socialist_ADJ:0 "Herzegovinian"
+BOS_herzegovina_radical_socialist_DEF:0 "Herzegovina"
+BOS_herzegovina_social_democrat:0 "Herzegovina"
+BOS_herzegovina_social_democrat_ADJ:0 "Herzegovinian"
+BOS_herzegovina_social_democrat_DEF:0 "Herzegovina"
+BOS_herzegovina_social_liberal:0 "Herzegovina"
+BOS_herzegovina_social_liberal_ADJ:0 "Herzegovinian"
+BOS_herzegovina_social_liberal_DEF:0 "Herzegovina"
+BOS_herzegovina_market_liberal:0 "Herzegovina"
+BOS_herzegovina_market_liberal_ADJ:0 "Herzegovinian"
+BOS_herzegovina_market_liberal_DEF:0 "Herzegovina"
+BOS_herzegovina_social_conservative:0 "Herzegovina"
+BOS_herzegovina_social_conservative_ADJ:0 "Herzegovinian"
+BOS_herzegovina_social_conservative_DEF:0 "Herzegovina"
+BOS_herzegovina_authoritarian_democrat:0 "Herzegovina"
+BOS_herzegovina_authoritarian_democrat_ADJ:0 "Herzegovinian"
+BOS_herzegovina_authoritarian_democrat_DEF:0 "Herzegovina"
+BOS_herzegovina_paternal_autocrat:0 "Herzegovina"
+BOS_herzegovina_paternal_autocrat_ADJ:0 "Herzegovinian"
+BOS_herzegovina_paternal_autocrat_DEF:0 "Herzegovina"
+BOS_herzegovina_national_populist:0 "Independent State of Herzegovina"
+BOS_herzegovina_national_populist_ADJ:0 "Herzegovinian"
+BOS_herzegovina_national_populist_DEF:0 "The Independent State of Herzegovina"
+
 ### Opinion Modifiers ###
 SER_orthodox_state_religion:0 "Orthodox state religion"
 SER_modern_and_secular:0 "Secularised"
@@ -1013,3 +1044,8 @@ serbia.72.b:0 "I was promised a politically correct mod!"
 serbia.73.t:0 "INDEPENDENCE IS A MYTH"
 serbia.73.d:0 "Ah yes, I promised you all a politically correct mod, with famous PoC leading their respective countries of origin. Right-wing ideologies (literally fascist) will be REMOVED after I finish with this mod."
 serbia.73.a:0 "Smash the patriarchy!"
+
+serbia.74.t:0 "Status of Herzegovina"
+serbia.74.d:0 "Our endeavors have recently awarded us with the control of Herzegovina, a part of Bosnia with a significant Serbian minority, although populated mostly by Bosniaks and Croats. Since we have taken the mantle of uniting all areas with a Serbian majority, some people have advocated for us to give Herzegovina autonomy. Should we create the Autonomous Province of Herzegovina, or should we subject them to our direct rule?"
+serbia.74.a:0 "Create the Autonomous Province of Herzegovina."
+serbia.74.b:0 "Subject them to our direct rule!"
