--- a/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Hungary_l_english.yml
+++ b/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Hungary_l_english.yml
@@ -550,15 +550,15 @@ kr.hungary.5.a:0 "Send them our eager volunteers"
 kr.hungary.5.b:0 "Send them warm food and other necessities"
 kr.hungary.5.c:0 "Our thoughts and prayers will be enough"
 
-kr.hungary.6.t:0 "Italian Volunteers Arrive"
-kr.hungary.6.d:0 "Today, many Italian volunteers have arrived in order to join our fight against those who disrespect God. Our country was always protected by God, but now we're also protected by the Catholic Italians."
+kr.hungary.6.t:0 "[PAP.GetNameADJ] Volunteers Arrive"
+kr.hungary.6.d:0 "Today, many [PAP.GetNameADJ] volunteers have arrived in order to join our fight against those who disrespect God. Our country was always protected by God, but now we're also protected by the Catholic Italians."
 kr.hungary.6.a:0 "Hallelujah!"
 
-kr.hungary.7.t:0 "Italian Equipment Arrives"
-kr.hungary.7.d:0 "Today, we have received a large shipment of food and other basic necessities, which will help us in the war. Our Italian brothers have not disappointed us, and this serves as another exaple of Catholics working together!"
+kr.hungary.7.t:0 "[PAP.GetNameADJ] Equipment Arrives"
+kr.hungary.7.d:0 "Today, we have received a large shipment of food and other basic necessities, which will help us in the war. Our [PAP.GetNameADJ] brothers have not disappointed us, and this serves as another exaple of Catholics working together!"
 kr.hungary.7.a:0 "Hallelujah!"
 
-kr.hungary.8.t:0 "Italian Thoughts and Prayers Arrive"
+kr.hungary.8.t:0 "[PAP.GetNameADJ] Thoughts and Prayers Arrive"
 kr.hungary.8.d:0 "Today, the one true nation of Italy has prayed for our success, and expressed their support in our cause. We are touched by this gesture, as even the Pope himself has approved of our actions."
 kr.hungary.8.a:0 "Hallelujah!"
 
@@ -640,3 +640,8 @@ kr.hungary.23.b:0 "Conquer our claims, separate them."
 kr.hungary.23.c:0 "They'll be our next state in our federation."
 kr.hungary.23.e:0 "They'll be our next two states in our federation."
 kr.hungary.23.e:0 "Occupy them, for now."
+
+kr.hungary.24.t:0 "Hungary in [Root.GetFactionName]?"
+kr.hungary.24.d:0 "Today, a Hungarian diplomat has come to our country and expressed a wish to join the [Root.GetFactionName]. Having such a strong ally would be a huge benefit to us. Shall we approve their request, or is their country on shaky ground?"
+kr.hungary.23.a:0 "Welcome to [Root.GetFactionName], Hungary!"
+kr.hungary.23.b:0 "We'd rather not..."
