joke event for hungary

--- a/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Serbia_l_english.yml
+++ b/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Serbia_l_english.yml
@@ -1037,13 +1037,13 @@ serbia.71.b:0 "The past meets the present! Keep the tricolor!"
 serbia.71.c:0 "If it ain't broke, don't fix it."
 
 serbia.72.t:0 "Welcome to Balkans Upgraded for Kaiserreich!"
-serbia.72.d:0 "This mod, as you probably know, adds focus trees, events and more to Serbia and Illyria (in Serbia's case, upgrading). While our end goal is to give the Balkan nations more paths they can take, I've only managed to convert the old version to the new version, without the Albanian tree.\nFrequently Asked Questions\nQ: Where is Albania?/nA: Since Kaiserreich has given Albania an expansive focus tree, I'll make a separate mod which will restore my version of Albania's focus tree, and potentially be integrated into the Balkans Upgraded mod. Might happen after the Hungary update./nQ: Where is Hungary?/nA: I've released this mod more as a conversion from the previous version, rather than adding Hungary immediately. Hungary needs to be converted, since I already coded everything there./nQ: Where is Greece?/nA: I haven't started planning the Greek tree yet, since I thought it would be included in the next KR update. I could do it with Albania since it didn't need much in terms of a focus tree./nWith that all being said, thank you for playing this mod and have fun!"
+serbia.72.d:0 "This mod, as you probably know, adds focus trees, events and more to Serbia, Hungary and Illyria (in Serbia's case, upgrading). While our end goal is to give the Balkan nations more paths they can take, I've only managed to convert the old version to the new version, without the Albanian tree.\nFrequently Asked Questions\nQ: Where is Albania?/nA: Since Kaiserreich has given Albania an expansive focus tree, I'll make a separate mod which will restore my version of Albania's focus tree, and potentially be integrated into the Balkans Upgraded mod. Might happen after the Hungary update./nQ: Where is Greece?/nA: I haven't started planning the Greek tree yet, since I thought it would be included in the next KR update. I could do it with Albania since it didn't need much in terms of a focus tree./nWith that all being said, thank you for playing this mod and have fun!"
 serbia.72.a:0 "I wanna play now."
 serbia.72.b:0 "I was promised a politically correct mod!"
 
 serbia.73.t:0 "INDEPENDENCE IS A MYTH"
 serbia.73.d:0 "Ah yes, I promised you all a politically correct mod, with famous PoC leading their respective countries of origin. Right-wing ideologies (literally fascist) will be REMOVED after I finish with this mod."
-serbia.73.a:0 "Smash the patriarchy!"
+serbia.73.a:0 "LISTEN AND BELIEVE"
 
 serbia.74.t:0 "Status of Herzegovina"
 serbia.74.d:0 "Our endeavors have recently awarded us with the control of Herzegovina, a part of Bosnia with a significant Serbian minority, although populated mostly by Bosniaks and Croats. Since we have taken the mantle of uniting all areas with a Serbian majority, some people have advocated for us to give Herzegovina autonomy. Should we create the Autonomous Province of Herzegovina, or should we subject them to our direct rule?"
