bugfixes and serbian additions

--- a/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Serbia_l_english.yml
+++ b/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Serbia_l_english.yml
@@ -105,6 +105,24 @@ SER_belgrade_pact_former_idea:0 "Balkan Peacebringer"
 SER_belgrade_pact_former_idea_desc:0 "Thanks to their valiant efforts, this country has brought peace to the chaotic balkans. They're seen in a good light by other countries."
 SER_belgrade_pact_former2_idea:0 "Balkan Peacebringer"
 SER_belgrade_pact_former2_idea_desc:0 "Thanks to their valiant efforts, this country has brought peace to the chaotic balkans. They're seen in a good light by other countries."
+SER_chaotic_position_idea:0 "Chaotic Political Position"
+SER_chaotic_position_idea_desc:0 "Since our country is in an awful, chaotic political position in the world, we should be careful about how we make our moves. However, we also need to be ready to defend our country in the time of need."
+SER_russian_refugees_idea:0 "Russian Refugees"
+SER_russian_refugees_idea_desc:0 "Since Kerensky's assassination, and even before that, the chaos Germany inflicted upon them is tragic. Therefore, many people came to their Slavic brothers in Serbia. While they started all over again with their careers in other countries, here they were offered positions they were appropriate for. A large number of qualified, Russian researchers and scientists is counted in."
+SER_militant_populace_idea:0 "Militant Populace"
+SER_militant_populace_idea_desc:0 "After losing the Weltkrieg, our citizens have become more militant and ruthless. They're very hostile and xenophobic to any enemy they face."
+SER_imports_markov_idea:0 "Russian Imports"
+SER_imports_markov_idea_desc:0 "We have imported Russian designs, which are better, more effective, and more reliable."
+SER_imports_shatilov_idea:0 "Russian Imports"
+SER_imports_shatilov_idea_desc:0 "We have imported Russian designs, which are better, more effective, and more reliable."
+SER_imports_wrangel_idea:0 "Russian Imports"
+SER_imports_wrangel_idea_desc:0 "We have imported Russian designs, which are better, more effective, and more reliable."
+SER_imports_denikin_idea:0 "Russian Imports"
+SER_imports_denikin_idea_desc:0 "We have imported Russian designs, which are better, more effective, and more reliable."
+SER_anti_austria_idea:0 "Anti-Austrian Agenda"
+SER_anti_austria_idea_desc:0 "With Serbia losing in the Weltkrieg and Austria lashing out on them, the Serbian soldiers have much more morale when fighting Austrian troops."
+SER_organized_generalstab_idea:0 "Generalstab Organized"
+SER_organized_generalstab_idea_desc:0 "We have successfully reorganized our Generalstab, which will help us in the long run."
 
 ### Cosmetic Tags ###
 SERempire_totalist:0 "Serbian Imperial State"
@@ -298,6 +316,8 @@ SER_quality_workforce:0 "Quality Workforce"
 SER_quality_workforce_desc:0 "In order for our military to perform the best they can, they need to have top notch equipment. Having their work monitored, quality standards set high, and having a chance of being punished if their job isn't done correctly, our workers will work as hard as ever. By the way, what is that group of workers doing over there?"
 SER_kosovo_chromium:0 "Found Kosovo's Chromium Mines"
 SER_kosovo_chromium_desc:0 "Kosovo has a very large quantity of unexploited natural resources - no wonder the Albanians want it. We need to open mines in Kosovo, in order to defend it better."
+SER_chaotic_position:0 "Chaotic Political Position"
+SER_chaotic_position_desc:0 "Since our country is in an awful, chaotic political position in the world, we should be careful about how we make our moves. However, we also need to be ready to defend our country in the time of need."
 
 ### King ###
 SER_crown_the_king:0 "Crown the King"
@@ -570,6 +590,8 @@ SER_agriculture:0 "Focus on Agriculture"
 SER_agriculture_desc:0 "As a nation of peasants, we need to improve and modernise our agriculture."
 SER_support_peasants:0 "Support the Peasants"
 SER_support_peasants_desc:0 "Serbia has a large agrarian sector, and we need to support the peasants in times of needs to ensure we will never experience famine."
+SER_farming_act:0 "New Farming Acts"
+SER_farming_act:0 "Since we are an agricultural nation, it would make sense for us to implement reforms related to farms and farming."
 SER_mechanisation:0 "Mechanisation"
 SER_mechanisation_desc:0 "Our agriculture is backwards compared to other countries and we need to invest in mechanisation."
 SER_industry:0 "Focus on Industry"
@@ -582,6 +604,10 @@ SER_invest_in_railroads:0 "Invest in Railroads"
 SER_invest_in_railroads_desc:0 "Good transportation is important for both our industry and agricultural sector. We need to invest in the railroad network to enable quick supply of factories."
 SER_extra_research_slot:0 "Military-Industrial Cooperation"
 SER_extra_research_slot_desc:0 "With our new economic policy in place, the state can start collaborating with large industrial companies to expand our research in different directions."
+SER_russian_refugees:0 "Russian Refugees"
+SER_russian_refugees_desc:0 "Since Kerensky's assassination, and even before that, the chaos Germany inflicted upon them is tragic. Therefore, many people came to their Slavic brothers in Serbia. While they started all over again with their careers in other countries, here they were offered positions they were appropriate for. A large number of qualified, Russian researchers and scientists is counted in."
+SER_control_over_villages:0 "Control Over Villages"
+SER_control_over_villages_desc:0 "There are many villages that we haven't made contact with. If we establish contact with them, it would benefit everyone."
 
 ### Army Reform ###
 
@@ -612,6 +638,18 @@ SER_army_tactics_mihailovic:0 "New Army Tactics"
 SER_army_tactics_mihailovic_desc:0 "We need to modernise our army tactics in order to be victorious in future conflicts."
 SER_mobilisation_of_the_masses:0 "Mobilisation of the Masses"
 SER_mobilisation_of_the_masses_desc:0 "A part of general Mihailović's strategy is the mobilisation of all people in our country. Peasants can defend their farms, citizens their towns. This will become an entirely new type of warfare and will ensure that we are always victorious."
+
+### Both ###
+SER_militant_populace:0 "Militant Populace"
+SER_militant_populace_desc:0 "After losing the Weltkrieg, our citizens have become more militant and ruthless. They're very hostile and xenophobic to any enemy they face."
+SER_russian_imports:0 "Russian Imports"
+SER_russian_imports_desc:0 "We can approach our Slavic brothers to the east for assistance, specifically related to importing weapons from them."
+SER_anti_austrian_agenda:0 "Anti-Austrian Agenda"
+SER_anti_austrian_agenda_desc:0 "With Serbia losing in the Weltkrieg and Austria lashing out on them, the Serbian soldiers have much more morale when fighting Austrian troops."
+SER_enemies_everywhere:0 "Enemies Everywhere"
+SER_enemies_everywhere_desc:0 "We're surrounded by potential enemies on all sides. We need to build border fortifications to defend ourselves!"
+SER_organize_generalstab:0 "Organize the Generalstab"
+SER_organize_generalstab_desc:0 "Organizing our Generalstab even further would prove very useful to us."
 
 ### Air Force ###
 SER_expand_air_force:0 "Expand the Air Force"
@@ -1049,3 +1087,8 @@ serbia.74.t:0 "Status of Herzegovina"
 serbia.74.d:0 "Our endeavors have recently awarded us with the control of Herzegovina, a part of Bosnia with a significant Serbian minority, although populated mostly by Bosniaks and Croats. Since we have taken the mantle of uniting all areas with a Serbian majority, some people have advocated for us to give Herzegovina autonomy. Should we create the Autonomous Province of Herzegovina, or should we subject them to our direct rule?"
 serbia.74.a:0 "Create the Autonomous Province of Herzegovina."
 serbia.74.b:0 "Subject them to our direct rule!"
+
+serbia.75.t:0 "Serbia in the [Root.GetFactionName]?"
+serbia.75.d:0 "Today, a Serbian diplomat has come to our country and expressed a wish to join the [Root.GetFactionName]. They want to rekindle the positive ties between our countries with an alliance. Shall we approve their request, or is their country on shaky grounds?"
+serbia.75.a:0 "Welcome to [Root.GetFactionName], Serbia!"
+serbia.75.b:0 "We'd rather not..."
