--- a/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Hungary_l_english.yml
+++ b/Balkans Expanded (actual files)/balkanskaiserreich/localisation/PK_Hungary_l_english.yml
@@ -641,12 +641,12 @@ kr.hungary.23.c:0 "They'll be our next state in our federation."
 kr.hungary.23.e:0 "They'll be our next two states in our federation."
 kr.hungary.23.e:0 "Occupy them, for now."
 
-kr.hungary.24.t:0 "Hungary in [Root.GetFactionName]?"
+kr.hungary.24.t:0 "Hungary in the [Root.GetFactionName]?"
 kr.hungary.24.d:0 "Today, a Hungarian diplomat has come to our country and expressed a wish to join the [Root.GetFactionName]. Having such a strong ally would be a huge benefit to us. Shall we approve their request, or is their country on shaky ground?"
 kr.hungary.24.a:0 "Welcome to [Root.GetFactionName], Hungary!"
 kr.hungary.24.b:0 "We'd rather not..."
 
-kr.hungary.24.t:0 "Hungary invites us into [HUN.GetFactionName]!"
-kr.hungary.24.d:0 "Today, a Hungarian diplomat has come to our country and expressed a wish for us to join the [HUN.GetFactionName]. Having such a strong ally would be a huge benefit to us, along with increasing diplomatic relations with them. Shall we approve their request, or is their country on shaky ground?"
-kr.hungary.24.a:0 "Welcome to [Root.GetFactionName], Hungary!"
-kr.hungary.24.b:0 "We'd rather not..."
+kr.hungary.25.t:0 "Hungary invites us into [HUN.GetFactionName]!"
+kr.hungary.25.d:0 "Today, a Hungarian diplomat has come to our country and expressed a wish for us to join the [HUN.GetFactionName]. Having such a strong ally would be a huge benefit to us, along with increasing diplomatic relations with them. Shall we approve their request, or is their country on shaky ground?"
+kr.hungary.25.a:0 "Welcome to [Root.GetFactionName], Hungary!"
+kr.hungary.25.b:0 "We'd rather not..."
